<resources>
    <string name="app_name">Flowchart_builder</string>
    <string name="btn_text_block_create">Создать блок</string>

    <string name="block_operation">Операция</string>
    <string name="block_condition">Условие</string>
    <string name="block_inlet">Вход/Выход</string>
    <string name="block_begin_cycle">Начало цикла</string>
    <string name="block_end_cycle">Конец цикла</string>
    <string name="dialog_block_settings_title">Настройки</string>
    <string name="text_textview_block_settings_text">Текст</string>
    <string name="text_textview_block_settings_width">ширина</string>
    <string name="text_textview_block_settings_height">высота</string>
    <string name="text_textview_block_settings_stroke_width">ширина линии</string>
    <string name="text_textview_block_settings_color">цвет</string>
    <string name="text_default_block">Текст блока</string>
    <string name="text_positive_button_dialog_block_settings">Применить</string>
    <string name="text_negative_button_dialog_block_settings">Отмена</string>
    <string name="text_textview_block_settings_text_size">ширина текста</string>
    <string name="text_textview_block_settings_text_color">цвет текста</string>

    <string name="title_dialog_add_chart">Введите название</string>
    <string name="text_positive_button_dialog_add_chart">Создать</string>
    <string name="text_negative_button_dialog_add_chart">Отмена</string>
    <string name="menu_delete">удалить</string>
    <string name="block_function">Функция</string>
    <string name="menu_share">поделиться</string>

    <string name="need_permission_write_external_storage">нужно разрешение на доступ к памяти устройства</string>
</resources>
